5394.	[cleanup]	Don't change effective uid/gid in named_os_openfile()
			if named is already running under specified uid/gid.
			[GL #1042] [GL #1090]

5393.	[cleanup]	Unused or redundant APIs were removed from libirs.
			[GL #1758]

5392.	[bug]		It was possible for named to crash during shutdown
			or reconfiguration if an RPZ zone was still being
			updated. [GL #1779]

5391.	[func]		The BIND 9 build system has been changed to use the
			usual stack of autoconf+automake+libtool.  [GL #4]

5390.	[placeholder]

5389.	[bug]		Finish the PKCS#11 code cleanup, fix couple of smaller
			bugs and use PKCS#11 v3.0 EdDSA macros and constants.
			Thanks to Aaron Thompson. [GL !3391]

5388.	[func]		Reject AXFR streams where the message id is not
			consistent. [GL #1674]

5387.	[placeholder]

5386.	[cleanup]	Address Coverity warnings in keymgr.c [GL #1737]

5385.	[func]		Make ISC rwlock implementation the default again.
			[GL #1753]

5384.	[bug]		With dnssec-policy, inline-signing was implicitly set
			to yes.  Change and only set inline-signing to yes
			if the zone is not dynamic. [GL #1709]

	--- 9.17.1 released ---

5383.	[func]		Add a quota attach function with a callback and clean up
			the isc_quota API. [GL !3280]

5382.	[bug]		Use clock_gettime() instead of gettimeofday() for
			isc_stdtime() function. [GL #1679]

5381.	[bug]		Fix logging API data race by adding rwlock and caching
			logging levels in stdatomic variables to restore
			performance to original levels. [GL #1675] [GL #1717]

5380.	[contrib]	Fix building MySQL DLZ modules against MySQL 8
			libraries. [GL #1678]

5379.	[placeholder]

5378.	[bug]		Receiving invalid DNS data was triggering an assertion
			failure in nslookup. [GL #1652]

5377.	[placeholder]

5376.	[bug]		Fix ineffective DNS rebinding protection when BIND is
			configured as a forwarding DNS server. Thanks to Tobias
			Klein. [GL #1574]

5375.	[test]		Fix timing issues in the "kasp" system test. [GL #1669]
